tests/macro-tests/cases/widget/unknown_inherit.stderr
error[E0425]: cannot find type `UnknownType` in this scope
 --> cases/widget/unknown_inherit.rs:4:23
  |
4 | pub struct TestWidget(UnknownType);
  |                       ^^^^^^^^^^^ not found in this scope
